# truth-social-collector

./: .env.example  .gitignore  .pnp.cjs  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
chrome-extension/: README.md  manifest.json
chrome-extension/src/: background.js  content.js  options.html  options.js  popup.html  popup.js  styles.css  ui.js  utils.js
docs/: methodology.md
scripts/: build-extension.mjs
src/truthbrush_oil_study/: __init__.py  backtest.py  cli.py  event_study.py  indicators.py  market_data.py  models.py  plots.py  report.py  topics.py  truth_social.py
tests/: background.test.mjs  build.test.mjs  retry.test.mjs  test_backtest_terms.py  test_cli_backtest.py  test_cli_backtest_terms.py  test_cli_signals.py  test_event_study.py  test_indicators.py  test_market_data.py  test_models.py  test_report.py  test_report_indicators.py  test_thread_context.py  test_topics.py  test_trumpstruth_source.py  test_truth_social.py  test_truth_social_fetch.py  webhook.test.mjs
